added build step to dockerfile