@@ -1,4 +1,10 @@
-FROM openjdk:11-jdk-oracle
+FROM gradle:7.3-jdk11-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
+
+FROM openjdk:11-jre-slim
 EXPOSE 8080
-ADD /build/libs/api-0.1.0-SNAPSHOT.jar api.jar
-ENTRYPOINT ["java", "-jar", "api.jar"]
+RUN mkdir /app
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/spring-boot-application.jar"]
